# shenzhen-solitaire-solver

./: .flake8  .gitignore  README.md  auto_solve.py  auto_solve_rust.py  lint.sh  main.py  play.py  requirements.in  requirements.txt  solitaire.py  test.sh  test_auto_solve.py
image_processing/: card_position_processing.py  image_list.py  image_processing.py
rust/: .gitignore  Cargo.toml  pyproject.toml
rust/benches/: benchmark.rs  job_count.rs
rust/src/: card.rs  game.rs  game_state.rs  lib.rs  main.rs
rust/tests/: benchmark.rs
