[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[dev-dependencies]
criterion = {version = "0.4.0", features = ["html_reports"]}
googletest = "0.3.0"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "job_count"
harness = false

[dependencies]
im = "15.1.0"
nohash-hasher = "0.2.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
rustc-hash = "1.1.0"
tikv-jemallocator = "0.5.0"
