[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_test_project"
crate-type = ["cdylib"]

[profile.bench]
debug = true

[dependencies]
pyo3 = "0.18.1"

[dev-dependencies]
criterion = "0.4.0"
googletest = "0.3.0"

[[bench]]
name = "benchmark"
harness = false
