[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shenzhen_solitaire_solver_rust"
crate-type = ["cdylib"]

[profile.bench]
debug = true

[dependencies]
pyo3 = "0.18.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
googletest = "0.3.0"

[[bench]]
name = "benchmark"
harness = false
